assets/css/style.css
/* ... */
.navigation-links a {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    width: 100%;
    color: #021c4a;
    font-size: 16px;
    font-weight: 700;
    text-decoration: none;
    background-color: #f7f5e8;
    background-clip: padding-box;
    font-family: 'Acme', sans-serif;
}

.navigation-links a:hover {
    color: white;
    background-color: #F0002A;
    height: 100%;
    -webkit-transition: all .1s ease-in-out;
    -o-transition: all .1s ease-in-out;
    transition: all .1s ease-in-out;
}


.navigation-social {
    display: none;
    max-height: 80px;
}


.label-toggle {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    width: 40px;
    height: 40px;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    position: absolute;
    right: 2%;
    top: 18px;
}

.label-toggle span {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    width: 30px;
    height: 4px;
    background-color: #f7f5e8;
    margin-bottom: 3px;
    margin-top: 3px;
    border: 1px solid #f7f5e8;
    border-radius: 3px;
}

#navigation-toggle {
    width: 40px;
    height: 40px;
    position: absolute;
    right: 2%;
    top: 18px;
    opacity: 0;
    cursor: pointer;
    z-index: 1;
    margin: 0;
    padding: 0;
}


#navigation-toggle:checked~.label-toggle>span {
    background-color: #021c4a;
    border-color: #021c4a;
    -webkit-transition: all .1s ease;
    -o-transition: all .1s ease;
    transition: all .1s ease;
}

#navigation-toggle:checked~ul {
    opacity: 1;
    height: auto;
    visibility: visible;
    -webkit-transition: all .4s ease;
    -o-transition: all .4s ease;
    transition: all .4s ease;
    position: absolute;
    z-index: 10;
}
    
    
    
/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ALL-PAGES~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
.background {
    position: absolute;
    width: 100%;
    top: 0;
    bottom: 0;
    background-color: #1f3759;
    left: 50%;
    -webkit-transform: translateX(-50%);
        -ms-transform: translateX(-50%);
            transform: translateX(-50%);
    z-index: -1;
}

h1 {
    font-size: 30px;
    font-weight: 600;
    padding: 10px 0;
    color: #4173b8;
    background-color: #f3eece;
    text-align: center;
    width: 100%;
    margin: 0;
    margin-bottom: 40px;
    -ms-flex-item-align: center;
        -ms-grid-row-align: center;
        align-self: center;
    -webkit-transform: none;
        -ms-transform: none;
            transform: none;
    font-family: 'Acme', sans-serif;
}

.wrapper {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-flow: column;
            flex-flow: column;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    margin-top: 120px;
}



/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~HOME-PAGE~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
/*------------------------------------PUBLICITY-CONTAINER*/
.publicity-container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-flow: column;
            flex-flow: column;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    width: 100%;
    height: 350px;
    background: white;
    z-index: 0;
}

.publicity-container img {
    position: absolute;
    left: 50%;
    top: 120px;
    -webkit-transform: translateX(-50%);
        -ms-transform: translateX(-50%);
            transform: translateX(-50%);
    max-width: 250px;
    z-index: -1;
}

.publicity-container button {
    margin-bottom: 20px;
    width: 150px;
    height: 40px;
    color: white;
    font-size: 18px;
    font-weight: 600;
    background-color: #F0002A;
    border: none;
    border-radius: 0;
    font-family: 'Acme', sans-serif;
}

.publicity-container button:focus {
    outline: none;
}

.publicity-container button:active,
.publicity-container button:hover {
    background-color: #BD0021;
    -webkit-transition: all .3s ease-in-out;
    -o-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
}

.publicity-container p {
    margin-bottom: -40px;
    font-size: 22px;
    font-weight: 600;
    text-align: center;
    padding: 15px;
    background-color: rgba(208, 0, 2, .7);
    color: white;
}

/*------------------------------------NEWS*/
.news-section-col {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -ms-flex-pack: distribute;
        justify-content: space-around;
    width: 100%;
    margin-top: 80px;
}

.news-section-row {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-flow: column;
            flex-flow: column;
}
/* ... */

